# veca-haskell

./: .gitignore  .travis.yml  README.md  check  run  stack.yaml  veca-haskell.cabal  vecahaskell.cabal
app/: Main.hs
src/: Complementary.hs  Helpers.hs  LabelledTransitionSystem.hs  Lib.hs  TimedAutomaton.hs  Tree.hs  Trifunctor.hs  Veca.hs  VecaDSL.hs
src/Examples/Rover/: Model.hs
src/Models/: Communication.hs  Complementary.hs  Events.hs  Internal.hs  LabelledTransitionSystem.hs  Name.hs  Named.hs  TCommunication.hs  TimedAutomaton.hs
src/Transformations/: ModelToText.hs  Substitution.hs
src/Trees/: Tree.hs  Trifunctor.hs
src/Veca/: DSL.hs  IO.hs  Model.hs  Operations.hs  Veca.hs  VecaDSL.hs
test/: EventsTests.hs  LabelledTransitionSystemTests.hs  ModelToTextTests.hs  RoverTests.hs  Spec.hs  SubstitutionTests.hs  TimedAutomatonTests.hs  TreeTests.hs  VecaTests.hs
