name:                veca-haskell
version:             0.1.0.0
synopsis:            Initial version
description:         Please see README.md
homepage:            https://github.com/pascalpoizat/veca-haskell#readme
license:             Apache-2.0
license-file:        LICENSE
author:              Pascal Poizat
maintainer:          pascal.poizat@lip6.fr
copyright:           2017 Pascal Poizat
category:            Verification
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Helpers
                     , Models.Complementary
                     , Models.Internal
                     , Models.Communication
                     , Models.Events
                     , Models.LabelledTransitionSystem
                     , Models.TimedAutomaton
                     , Transformations.ModelToText
                     , Trees.Trifunctor
                     , Trees.Tree
                     , Veca.Veca
                     , Veca.VecaDSL
  build-depends:       base >= 4.7 && < 5
                     , containers >= 0.5
                     , hashable >= 1.2
                     , graphviz >= 2999.18
  default-language:    Haskell2010

executable veca-haskell-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
                       -fwarn-unused-imports
                       -fwarn-incomplete-uni-patterns
                       -fwarn-incomplete-patterns
                       -fwarn-overlapping-patterns
                       -fwarn-missing-signatures
                       -fwarn-name-shadowing
  build-depends:       base >= 4.7 && < 5
                     , veca-haskell == 0.1.0.0
                     , containers >= 0.5
                     , hashable >= 1.2
                     , graphviz >= 2999.18
  default-language:    Haskell2010

test-suite veca-haskell-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  other-modules:       EventsTests
                     , LabelledTransitionSystemTests
                     , ModelToTextTests
                     , RoverTests
                     , TimedAutomatonTests
                     , TreeTests
  main-is:             Spec.hs
  build-depends:       base >= 4.7 && < 5
                     , containers >= 0.5
                     , hashable >= 1.2
                     , graphviz >= 2999.18
                     , tasty >= 0.11.0.4
                     , tasty-hunit >= 0.9.2
                     , tasty-quickcheck >= 0.8.4
                     , tasty-smallcheck >= 0.8.1
                     , tasty-expected-failure >= 0.11.0.4
                     , veca-haskell == 0.1.0.0
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
                       -fwarn-unused-imports
                       -fwarn-incomplete-uni-patterns
                       -fwarn-incomplete-patterns
                       -fwarn-overlapping-patterns
                       -fwarn-missing-signatures
                       -fwarn-name-shadowing
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/pascalpoizat/veca-haskell
