name:                vecahaskell
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/pascalpoizat/vecahaskell#readme
license:             APACHE2
license-file:        LICENSE
author:              Pascal Poizat
maintainer:          pascal.poizat@lip6.fr
copyright:           2017 Pascal Poizat
category:            Verification
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Tree
  build-depends:       base >= 4.7 && < 5
                     , containers >= 0.5
  default-language:    Haskell2010

executable vecahaskell-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >= 4.7 && < 5
                     , vecahaskell
                     , containers >= 0.5
  default-language:    Haskell2010

test-suite vecahaskell-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base >= 4.7 && < 5
                     , tasty >= 0.11.0.4
                     , tasty-hunit >= 0.9.2
                     , tasty-smallcheck >= 0.8.1
                     , tasty-quickcheck >= 0.8.4
                     , vecahaskell
                     , containers >= 0.5
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/pascalpoizat/vecahaskell
